# expyt

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  Taskfile.yml  eslint.config.js  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  deploy-docs.yml
app/: __init__.py  main.py
app/core/: __init__.py  registry.py  session.py
app/datasets/: __init__.py  models.py  repository.py  utils.py
app/exporters/: __init__.py  base.py
app/exporters/builtin/: __init__.py  csv_exporter.py  json_exporter.py  pdf_exporter.py
app/filters/: __init__.py  base.py
app/filters/builtin/: __init__.py
app/plots/: __init__.py  base.py
app/plots/builtin/: __init__.py  boxplot.py  ecdf.py  hierarchical.py  violin.py
app/static/: app.js  index.html  pacman.js  style.css
app/static/modules/: api.js  events.js
app/stats/: __init__.py  base.py  models.py  properties.py
app/stats/builtin/: __init__.py  anova.py  chi_square.py  hierarchical.py  kruskal_wallis.py  mann_whitney.py  ttest.py
app/stats/properties/: __init__.py  assumptions.py  core.py  flat.py  hierarchical.py
app/templates/: base.html
app/templates/partials/: filter_fields_category.html  filter_fields_cluster.html  filter_fields_numeric.html  session_info.html  sidebar_actions.html  step_1.html  step_2.html  step_3.html  step_4.html  step_5.html  step_6.html  steps_nav.html  workspace.html
app/wizard/: __init__.py  router.py  schemas.py  service.py  steps.py
app/wizard/router/: __init__.py  (+7 more)
scripts/: generate_openapi.py
tests/: __init__.py  conftest.py
tests/e2e/: conftest.py  test_api_e2e.py  test_playwright_e2e.py  test_public_dataset.py
tests/integration/: test_wizard_flow.py  test_wizard_flow_basic.py  test_wizard_flow_hierarchy.py  test_wizard_flow_mixed.py  test_wizard_flow_negative.py
tests/unit/: test_app.py  test_datasets.py  test_exporters.py  test_extensibility.py  test_hierarchical_stats.py  test_plots.py  test_registry.py  test_session.py  test_stats_methods.py  test_stats_properties.py  test_steps.py
(+5 files in other folders)
