[project]
name = "expyt"
version = "0.1.2"
description = "FastAPI Experiment Evaluation Wizard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pandas>=2.2",
    "scipy>=1.14",
    "matplotlib>=3.9",
    "httpx>=0.28",
    "reportlab>=4.2",
]

[dependency-groups]
dev = [
    "ruff>=0.12",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "pytest-asyncio>=1.0",
    "pandas-stubs>=2.2",
    "types-reportlab>=4.2",
    "pre-commit>=4.2",
    "bump-my-version>=1.4.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header", "fastapi.Cookie", "fastapi.Form", "fastapi.File"]

[tool.mypy]
strict = true
plugins = []
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers -ra"

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "pass",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bumpversion]
current_version = "0.1.2"
commit = true
tag = true
pre_commit_hooks = [
    "uv lock",
    "git add uv.lock"
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

